--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="luli.css">
     <title>LULI</title>
+    <iframe id="spotifyPlayer" 
+    src="https://open.spotify.com/embed/track/00An04LOF36saBLHZpBRLH?si=4f65cbb068614c5f" 
+    width="300" 
+    height="80" 
+    frameborder="0" 
+    allowtransparency="true" 
+    allow="encrypted-media" 
+    autoplay="true">
+</iframe>
+
     <h1>Memórias de LULI</h1>
 </head>
 <body>
